--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.minimap.enabled": false,
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
-    "workbench.iconTheme": "material-icon-theme"
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "Atom Dark Syntax"
 }
